syntax = "proto3";

option go_package = "v1/services/system;system";
option java_multiple_files = true;
option csharp_namespace = "CasbinOrg.Grpc";
option java_outer_classname = "APIServiceSystemCasbinProto";
option java_package = "com.origadmin.api.v1.services.system";
option objc_class_prefix = "APIServiceSystemCasbin";

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "system/types.proto";

package api.v1.services.system;

// The Casbin source service definition.
service CasbinSourceService {
  rpc ListPolicies (ListPoliciesRequest) returns (ListPoliciesResponse) {
    option (google.api.http) = {
      get: "/casbin/policies"
      response_body: "*"
    };
  }
  rpc ListGroupings (ListGroupingsRequest) returns (ListGroupingsResponse) {
    option (google.api.http) = {
      get: "/casbin/groupings"
      response_body: "*"
    };
  }
  rpc WatchUpdate (WatchUpdateRequest) returns (WatchUpdateResponse) {
    option (google.api.http) = {
      get: "/casbin/watch"
      response_body: "*"
    };
  }

  rpc StreamRules (StreamRulesRequest) returns (stream StreamRulesResponse) {
    option (google.api.http) = {
      get: "/casbin/stream"
      response_body: "*"
    };
//    (google.api.method_signature) = "with_policies,with_groupings";
  }


}

message ListPoliciesRequest {}

message ListPoliciesResponse {
  repeated PolicyRule rules = 1;
}

message PolicyRule {
  string p_type = 1 [json_name = "p_type"];
  repeated string params = 2 [json_name = "params"];
}

message ListGroupingsRequest {}

message ListGroupingsResponse {
  repeated GroupingRule rules = 1 [json_name = "rules"];
}

message GroupingRule {
  string p_type = 1 [json_name = "p_type"];
  repeated string params = 2 [json_name = "params"];
}

message StreamRulesRequest {
  bool with_policies = 1 [json_name = "with_policies"];
  bool with_groupings = 2 [json_name = "with_groupings"];
}

message StreamRulesResponse {
  oneof rule_type {
    PolicyRule policy = 1;
    GroupingRule grouping = 2;
  }
}

message WatchUpdateRequest {
  int64 last_modified = 1 [json_name = "last_modified"];
}

message WatchUpdateResponse {
  int64 modified_date = 1 [json_name = "modified_date"];
}